re PR target/12028 (powerpc-eabispe produces bad sCOND operation)

PR 12028
	* config/rs6000/rs6000.c (ccr_bit): Don't let consistency check
	failure stop compilation, just print helpful message.

From-SVN: r77586